MyCalendar.MVC/Content/Site.css
body {
    padding-top: 50px;
    padding-bottom: 20px;
    background-image: url('https://newevolutiondesigns.com/images/freebies/white-wallpaper-18.jpg')
}

/* load spinner */
#cover-spin {
    position: fixed;
    width: 100%;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    background-color: rgba(255,255,255,0.7);
    z-index: 9999;
    display: none;
}

@-webkit-keyframes spin {
    from {
        -webkit-transform: rotate(0deg);
    }

    to {
        -webkit-transform: rotate(360deg);
    }
}

@keyframes spin {
    from {
        transform: rotate(0deg);
    }

    to {
        transform: rotate(360deg);
    }
}

#cover-spin::after {
    content: '';
    display: block;
    position: absolute;
    left: 48%;
    top: 40%;
    width: 40px;
    height: 40px;
    border-style: solid;
    border-color: black;
    border-top-color: transparent;
    border-width: 4px;
    border-radius: 50%;
    -webkit-animation: spin .8s linear infinite;
    animation: spin .8s linear infinite;
}

/* spinner without background */
.loader {
    border: 16px solid #f3f3f3;
    border-radius: 50%;
    border-top: 16px solid #09c;
    width: 20px;
    height: 20px;
    -webkit-animation: spin 2s linear infinite; /* Safari */
    animation: spin 2s linear infinite;
}

/* Safari */
@-webkit-keyframes spin {
    0% {
        -webkit-transform: rotate(0deg);
    }

    100% {
        -webkit-transform: rotate(360deg);
    }
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

/* Set padding to keep content from hitting the edges */
.body-content {
    padding-left: 15px;
    padding-right: 15px;
}

/* Override the default bootstrap behavior where horizontal description lists 
   will truncate terms that are too long to fit in the left column 
*/
.dl-horizontal dt {
    white-space: normal;
}

/* Set width on the form input elements since they're 100% wide by default */
input,
select,
textarea {
    max-width: 280px;
}


.form-inline {
    display: flex;
    flex-flow: row wrap;
    align-items: center;
}

/* Add some margins for each label */
.form-inline label {
    margin: 5px 10px 5px 0;
}

/* Style the input fields */
.form-inline input {
    vertical-align: middle;
    margin: 5px 10px 5px 0;
    padding: 10px;
    background-color: #fff;
    border: 1px solid #ddd;
}

/* Style the submit button */
.form-inline button {
    padding: 10px 20px;
    background-color: dodgerblue;
    border: 1px solid #ddd;
    color: white;
}

.form-inline button:hover {
    background-color: royalblue;
}

/* active item */
.active {
    color: #09c;
}

/* Add responsiveness - display the form controls vertically instead of horizontally on screens that are less than 800px wide */
@media (max-width: 800px) {
    .form-inline input {
        margin: 10px 0;
    }

    .form-inline {
        flex-direction: column;
        align-items: stretch;
    }

    .add-type, .edit-type{
        display: none;
    }
}

.card-header {

    height: 55px;
}

.treeview {
    /*border-top-left-radius: 10px;
    border-top-right-radius: 10px;*/
}

/* multi level dropdown*/
.menu {

    font-size: medium;
}

.menu ul {
  margin: 0;
  padding: 0;
}

.menu .main-menu {
  display: none;
}

#tm:checked + .main-menu {
  display: block;
}

.menu input[type="checkbox"], 
.menu ul span.drop-icon {
  display: none;
}

.menu li, 
.toggle-menu, 
.menu .sub-menu {
  border-style: solid;
  border-color: rgba(0, 0, 0, .05);
}

.menu li, 
.toggle-menu {
  border-width: 0 0 1px;
}


.menu .sub-menu {
  background-color: #343a40;
  border-width: 1px 1px 0;
  margin: 0 1em;
}

.menu .sub-menu li:last-child {
  border-width: 0;
}

.menu li, 
.toggle-menu, 
.menu a {
  position: relative;
  display: block;
  color: white;
  text-shadow: 1px 1px 0 rgba(0, 0, 0, .125);
}

.menu,
.toggle-menu {
    background-color: #343a40;
}

.toggle-menu, 
.menu a {
  padding: 1em 1.5em;
}

.menu a {
  transition: all .125s ease-in-out;
  -webkit-transition: all .125s ease-in-out;
}

.menu a:hover {
  color: #09c;
  text-decoration: none;
}

.menu .sub-menu {
  display: none;
}

.menu input[type="checkbox"]:checked + .sub-menu {
  display: block;
}

.toggle-menu .drop-icon, 
.menu li label.drop-icon {
  position: absolute;
  right: 1.5em;
  top: 1.25em;
}

.menu .drop-icon {
  line-height: 1;
}

.menu .home-link {
    font-size: 17px;
}

.menu li.menu-right {
    float: right;
}

@media (max-width: 991.98px) {
    .toggle-menu {
        margin: 0px;
    }

    .menu .home-link {
        display: none;
    }

    .menu .container {
        padding-right: 0px;
        padding-left: 0px;
    }

    .menu li.menu-right {
        float: none;
    }
}

@media only screen and (max-width: 64em) and (min-width: 52.01em) {
  .menu li {
    width: 33.333%;
  }

  .menu .sub-menu li {
    width: auto;
  }
}

@media only screen and (min-width: 52em) {
  .menu .main-menu {
    display: block;
  }

  .toggle-menu, 
  .menu label.drop-icon {
    display: none;
  }

  .menu ul span.drop-icon {
    display: inline-block;
  }

  .menu li {
    float: left;
    border-width: 0 1px 0 0;
  }

  .menu .sub-menu li {
    float: none;
  }

  .menu .sub-menu {
    border-width: 0;
    margin: 0;
    position: absolute;
    top: 100%;
    left: 0;
    width: 140%;
    z-index: 3000;
  }

  .menu .sub-menu, 
  .menu input[type="checkbox"]:checked + .sub-menu {
    display: none;
  }

  .menu .sub-menu li {
    border-width: 0 0 1px;
  }

  .menu .sub-menu .sub-menu {
    top: 0;
    left: 100%;
  }

  .menu li:hover > input[type="checkbox"] + .sub-menu {
    display: block;
  }
}

/* bootstrap overrides*/

.icon-align {
    margin-left: -5px;
    margin-right: -20px;
}

.btn-link {
    color: #09c !important;
}

.btn-link a {
    color: #09c !important;
}

